fix z-index

--- a/odashboard/static/src/css/odash_iframe_widget.css
+++ b/odashboard/static/src/css/odash_iframe_widget.css
@@ -11,7 +11,6 @@
     right: 0;
     background-color: #fff;
     border-top: 1px solid rgb(216, 218, 221);
-    z-index: 1000;
     /* Default: 50px top when no neutralize banner */
 }
 
